[gd_scene load_steps=52 format=3 uid="uid://dv28dq83nhi23"]

[ext_resource type="Script" path="res://Scripts/Characters/warrior.gd" id="1_k0wjc"]
[ext_resource type="Texture2D" uid="uid://1lbcj6euko8p" path="res://Characters/Allies/Hero Knight/Attack2.png" id="1_mvavf"]
[ext_resource type="Texture2D" uid="uid://bw6wlw8tagv6b" path="res://Characters/Allies/Hero Knight/Death.png" id="2_6a8go"]
[ext_resource type="Texture2D" uid="uid://dx6x0ni5w8amv" path="res://Characters/Allies/Hero Knight/Take Hit.png" id="3_dliqm"]
[ext_resource type="Texture2D" uid="uid://b3nkaqjk86mv" path="res://Characters/Allies/Hero Knight/Idle.png" id="4_7p316"]
[ext_resource type="Texture2D" uid="uid://0aqfyw4wa3bw" path="res://Characters/Allies/Hero Knight/Run.png" id="5_68c83"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k0k52"]
atlas = ExtResource("1_mvavf")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iyac"]
atlas = ExtResource("1_mvavf")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sttf"]
atlas = ExtResource("1_mvavf")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu4gh"]
atlas = ExtResource("1_mvavf")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_37qgo"]
atlas = ExtResource("1_mvavf")
region = Rect2(720, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1op6"]
atlas = ExtResource("1_mvavf")
region = Rect2(900, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n108"]
atlas = ExtResource("1_mvavf")
region = Rect2(1080, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvrvy"]
atlas = ExtResource("2_6a8go")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_58dvf"]
atlas = ExtResource("2_6a8go")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_38j6h"]
atlas = ExtResource("2_6a8go")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_dik5h"]
atlas = ExtResource("2_6a8go")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_484hc"]
atlas = ExtResource("2_6a8go")
region = Rect2(720, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp8bg"]
atlas = ExtResource("2_6a8go")
region = Rect2(900, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h4ey"]
atlas = ExtResource("2_6a8go")
region = Rect2(1080, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ulcq"]
atlas = ExtResource("2_6a8go")
region = Rect2(1260, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1t2y"]
atlas = ExtResource("2_6a8go")
region = Rect2(1440, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_svwe1"]
atlas = ExtResource("2_6a8go")
region = Rect2(1620, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_10wyo"]
atlas = ExtResource("2_6a8go")
region = Rect2(1800, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_35liq"]
atlas = ExtResource("2_6a8go")
region = Rect2(1800, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_6msnq"]
atlas = ExtResource("3_dliqm")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6lo1"]
atlas = ExtResource("3_dliqm")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwqci"]
atlas = ExtResource("3_dliqm")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_55wyt"]
atlas = ExtResource("3_dliqm")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkfcm"]
atlas = ExtResource("4_7p316")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhp6a"]
atlas = ExtResource("4_7p316")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_arxpq"]
atlas = ExtResource("4_7p316")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0rl7"]
atlas = ExtResource("4_7p316")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53xo"]
atlas = ExtResource("4_7p316")
region = Rect2(720, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ky0e"]
atlas = ExtResource("4_7p316")
region = Rect2(900, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb44i"]
atlas = ExtResource("4_7p316")
region = Rect2(1080, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6mwy"]
atlas = ExtResource("4_7p316")
region = Rect2(1260, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yfdh"]
atlas = ExtResource("4_7p316")
region = Rect2(1440, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_chq01"]
atlas = ExtResource("4_7p316")
region = Rect2(1620, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yw85"]
atlas = ExtResource("4_7p316")
region = Rect2(1800, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk5qg"]
atlas = ExtResource("5_68c83")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsecc"]
atlas = ExtResource("5_68c83")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftl5r"]
atlas = ExtResource("5_68c83")
region = Rect2(360, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqypl"]
atlas = ExtResource("5_68c83")
region = Rect2(540, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbeg2"]
atlas = ExtResource("5_68c83")
region = Rect2(720, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0u2q"]
atlas = ExtResource("5_68c83")
region = Rect2(900, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_iufbv"]
atlas = ExtResource("5_68c83")
region = Rect2(1080, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsmo4"]
atlas = ExtResource("5_68c83")
region = Rect2(1260, 0, 180, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_upqiy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0k52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iyac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sttf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu4gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37qgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1op6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n108")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvrvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58dvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38j6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dik5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_484hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp8bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ulcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1t2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svwe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10wyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35liq")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6msnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6lo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwqci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55wyt")
}],
"loop": true,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkfcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhp6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arxpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0rl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ky0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb44i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6mwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yfdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chq01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yw85")
}],
"loop": true,
"name": &"idle",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk5qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsecc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftl5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqypl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbeg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0u2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iufbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsmo4")
}],
"loop": true,
"name": &"run",
"speed": 13.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gasvs"]
radius = 39.0128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0nuvg"]
size = Vector2(34, 8)

[node name="Warrior" type="CharacterBody2D" groups=["allies"]]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_k0wjc")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_upqiy")
animation = &"run"
frame_progress = 0.785812

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_gasvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 14)
shape = SubResource("RectangleShape2D_0nuvg")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
